# e16

./: .gitignore  README.md
.github/workflows/: cmake.yml  nvim-plugin.yml
assembler/: .gitignore  CMakeLists.txt
assembler/include/: compiler.h  parser.h
assembler/src/: compiler.cpp  dictionary.cpp  main.cpp  parser.cpp
assembler/tests/: loop.e16  main.e16
bios/: assetData.e16  interrupts.e16  main.e16  utils.e16
bios/assets/: corrupted.e16  corrupted.e16bg  missing.e16  missing.e16bg
bios/assets/1/: one.e16  one.e16spr
bios/assets/6/: six.e16  six.e16spr
bios/assets/B/: b.e16  b.e16spr
bios/assets/E/: E.e16  E.e16spr
bios/assets/E2/: e2.e16  e2.e16spr
bios/assets/M/: m.e16  m.e16spr
bios/assets/R/: r.e16  r.e16spr
bios/assets/startup animation/: StartupAnimation-Progress.aseprite
bios/graphics/: animation.e16  background.e16  copyData.e16
bios/songs/: startup.e16
converter/: .gitignore  CMakeLists.txt
converter/src/: e16_assets.h  e16spritepack.cpp  e16tilemap.cpp  main.cpp
disassembler/: .gitignore  CMakeLists.txt
disassembler/src/: main.cpp
emulator/: CMakeLists.txt  bios-test.e16  justfile
emulator/cmake/: embed_binary.cmake
emulator/include/e16/: apu.h  common.h  cpu.h  debugger.h  disassembler.h  emulator.h  flame.h  log.h  memory.h  sdl_host.h
emulator/src/: apu.cpp  common.cpp  cpu.cpp  debugger.cpp  disassembler.cpp  emulator.cpp  flame.cpp  log.cpp  main.cpp  memory.cpp  sdl_host.cpp
musicMaker/: .clang-format  CMakeLists.txt  README.md
musicMaker/include/: music_maker.h
musicMaker/src/: app.cpp  audio.cpp  main.cpp  pcm_import.cpp  song.cpp
nvim/e16.nvim/: README.md
nvim/e16.nvim/ftdetect/: e16.vim
nvim/e16.nvim/ftplugin/: e16.vim
nvim/e16.nvim/lua/e16/: init.lua
nvim/e16.nvim/server/: e16_lsp.py
nvim/e16.nvim/syntax/: e16.vim
tests/a4/: main.e16
tests/inputPad1/: main.e16
tests/makingSprite/: main.e16  smile8x8.aseprite  smile8x8.e16img
tests/movingSprite/: main.e16
tests/solid/: main.e16
